fix: profile 이름 변경

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
         #- saml
         #- slack
         #- aws
-      dev:
+      test:
         #- saml
         #- slack
         #- aws
-      deploy:
+      main:
         #- saml
         #- slack
         #- aws
