--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Gradle Wrapper로 빌드
       run: |
         chmod +x ./gradlew
+        ./gradlew test -i
         ./gradlew clean build
       
     - name: Docker Buildx [SetUp]
