fix: 프로필 변경

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
         #- saml
         #- slack
         #- aws
-      test:
+      develop:
         #- saml
         #- slack
         #- aws
-      main:
+      deploy:
         #- saml
         #- slack
         #- aws
