--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -93,8 +93,9 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         ssh -o StrictHostKeyChecking=no -i ${HOME}/.ssh/id_rsa ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_ADDRESS }} <<EOF
+          docker rmi class-connect-v2-backend-main || true
           docker pull ${{ secrets.DOCKER_USERNAME }}/class-connect-v2-backend-main:latest
-          docker stop main || true && docker rm main || true && docker rmi class-connect-v2-backend-main || true
+          docker stop main || true && docker rm main || true
           nohup docker run -d --name main -p 8080:8080 -e TZ=Asia/Seoul --env-file ~/${{ secrets.SVC_DIR }}/MAIN/.env --env SPRING_PROFILES_ACTIVE=deploy ${{ secrets.DOCKER_USERNAME }}/class-connect-v2-backend-main:latest > main.log 2>&1 &
         EOF
 
@@ -102,7 +103,8 @@ jobs:
       if: github.ref == 'refs/heads/test'
       run: |
         ssh -o StrictHostKeyChecking=no -i ${HOME}/.ssh/id_rsa ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_ADDRESS }} <<EOF
+          docker rmi class-connect-v2-backend-test || true
           docker pull ${{ secrets.DOCKER_USERNAME }}/class-connect-v2-backend-test:latest
-          docker stop test || true && docker rm test || true && docker rmi class-connect-v2-backend-test || true
+          docker stop test || true && docker rm test || true
           nohup docker run -d --name test -p 8090:8080 -e TZ=Asia/Seoul --env-file /home/ubuntu/${{ secrets.SVC_DIR }}/TEST/.env --env SPRING_PROFILES_ACTIVE=develop ${{ secrets.DOCKER_USERNAME }}/class-connect-v2-backend-test:latest > test.log 2>&1 &
         EOF
