--- a/docker/nginx/conf/proxy.conf
+++ b/docker/nginx/conf/proxy.conf
@@ -21,6 +21,9 @@ server {
 
     location /api {
         proxy_pass  http://api-main;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 
     set $webp_suffix "";
@@ -46,6 +49,9 @@ server {
 
     location /api {
         proxy_pass  http://api-test;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 
     set $webp_suffix "";
