--- a/docker/nginx/conf/proxy.conf
+++ b/docker/nginx/conf/proxy.conf
@@ -10,7 +10,7 @@ upstream api-test {
 
 server {
     listen 443 ssl;
-    server_name api.classconnect.kr;
+    server_name api.class-connect.kr;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/$host/fullchain.pem;
@@ -40,7 +40,7 @@ server {
 
 server {
     listen 8443 ssl;
-    server_name test.classconnect.kr;
+    server_name api.class-connect.kr;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/$host/fullchain.pem;
