--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -6,8 +6,7 @@ spring:
   datasource:
     hikari:
       maximum-pool-size: 4
-    #url: jdbc:mariadb://${LOCAL_DB_HOST}:${LOCAL_DB_PORT}/${LOCAL_DB_NAME}
-    url: jdbc:mariadb://${LOCAL_DB_HOST}:3306/${LOCAL_DB_NAME}
+    url: jdbc:mariadb://${LOCAL_DB_HOST}:${LOCAL_DB_PORT}/${LOCAL_DB_NAME}
     username: ${LOCAL_DB_USER}
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
@@ -17,9 +16,9 @@ spring:
       landing-page-url: ${LANDING_PAGE_URL}
       sign-up-page-url: ${SIGNUP_PAGE_URL}
 
-#server:
-#  domain: https://localhost
-#  port: ${LOCAL_SERVER_PORT:8443}
+server:
+  domain: https://localhost
+  port: ${LOCAL_SERVER_PORT:8443}
 #  ssl:
 #    key-store: ${SSL_KEY_STORE}
 #    key-store-type: ${SSL_KEY_TYPE}
