--- a/src/main/resources/application-main.yaml
+++ b/src/main/resources/application-main.yaml
@@ -18,7 +18,8 @@ spring:
 
 server:
   domain: ${BACK_DOMAIN}
-  port: ${DEPLOY_SERVER_PORT:443}
+  port: 8080
+  port-export: ${DEPLOY_SERVER_PORT:443}
 #  ssl:
 #    key-store: ${SSL_KEY_STORE}
 #    key-store-type: ${SSL_KEY_TYPE}
