chore: test.yaml DEBUG 모드 추가

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -24,3 +24,7 @@ server:
 #    key-store: ${SSL_KEY_STORE}
 #    key-store-type: ${SSL_KEY_TYPE}
 #    key-store-password: ${SSL_KEY_PASSWORD}
+
+logging:
+  level:
+    root: DEBUG
