정적 리소스 파일 경로 수정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,10 +35,10 @@ spring:
 
 
   # MVC
-  web:
-    resources:
-      static-locations: classpath:/WEB-INF/
-      add-mappings: true
+#  web:
+#    resources:
+#      static-locations: classpath:/WEB-INF/
+#      add-mappings: true
 
   # Multipart file
   servlet:
